# vai-smpl-stdiff

./: .gitignore  CMakeLists.txt  README.md
100-UNet-seungwoo/: CMakeLists.txt  main.cpp  main.hpp
100-UNet-seungwoo/networks/include/: unet.hpp
100-UNet-seungwoo/networks/src/: unet.cpp
100-UNet-seungwoo/shaders/include/: shaders.hpp
110-GPT2-hyungkyu/: CMakeLists.txt  README.md  error.h  main.cpp
110-GPT2-hyungkyu/core/: neuralNet.h  tensor.h  vulkanApp.cpp
110-GPT2-hyungkyu/model/: gpt2Test.cpp
110-GPT2-hyungkyu/model/attention/: attentionNode.cpp  attentionNode.h  attentionNodeTest.cpp  generate_test_data.py  mha_test_data.json
110-GPT2-hyungkyu/tokenizer/: bpeTokenizer.cpp  bpeTokenizer.h  test.cpp
110-GPT2-hyungkyu/utils/: download_gpt2_weights.py
112-SuffleNet-Chaeeun/: SuffleNet.h
117-yolo-dalmurii/: CMakeLists.txt
